adaptive markup - index
all is done except:
what  is not finished:
- header
- footer
-modal

--- a/sass/components/_filter-element.scss
+++ b/sass/components/_filter-element.scss
@@ -25,3 +25,19 @@
     background: var(--bgcolor-filter-btn-active);
   }
 }
+
+@media screen and (max-width: 767px) {
+  .filter-element {
+    margin-bottom: 15px;
+  }
+  .filter-element:nth-child(4),
+  .filter-element:nth-child(5) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filter-element {
+    margin-bottom: 0px;
+  }
+}
