--- a/css/main.css
+++ b/css/main.css
@@ -255,6 +255,22 @@ ul {
   background: var(--bgcolor-filter-btn-active);
 }
 
+@media screen and (max-width: 767px) {
+  .filter-element {
+    margin-bottom: 15px;
+  }
+  .filter-element:nth-child(4),
+  .filter-element:nth-child(5) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filter-element {
+    margin-bottom: 0px;
+  }
+}
+
 .social-links {
   display: flex;
   margin-top: 16px;
@@ -697,14 +713,22 @@ footer {
   margin: 0 auto;
   background: var(--bgcolor-hero);
   background-color: var(--hero-bg);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-hero.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-hero-480.jpg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-hero-768.jpg);
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .hero {
     padding: 200px 0;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-hero-1600.jpg);
   }
 }
 
@@ -744,6 +768,24 @@ footer {
   }
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 .features__feature-title {
   font-size: 14px;
   font-weight: bold;
@@ -770,10 +812,11 @@ footer {
   }
 }
 
-.features__feature-element {
-  /*   width: 270px;
-  margin-right: 30px; */
-  margin-bottom: 30px;
+@media screen and (min-width: 1200px) {
+  .features__list {
+    flex-wrap: nowrap;
+    margin: 0;
+  }
 }
 
 .features__feature-element::before {
@@ -789,6 +832,12 @@ footer {
   margin-bottom: 30px;
 }
 
+@media screen and (max-width: 767px) {
+  .features__feature-element:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .features__feature-element {
     width: calc(50% - 30px);
@@ -799,7 +848,9 @@ footer {
 @media screen and (min-width: 1200px) {
   .features__feature-element {
     width: 270px;
-    margin: 0px;
+    margin: 0;
+  }
+  .features__feature-element:not(:last-child) {
     margin-right: 30px;
   }
 }
@@ -989,15 +1040,12 @@ footer {
 .projects .filter-list {
   border: none;
   display: flex;
-  margin: 0 auto;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  /* margin: 0 auto; */
+  margin-bottom: 30px;
 }
 
-.projects .projects-element:not(:nth-child(3n + 3)) {
-  margin-right: 30px;
-}
-
-.projects .projects-element:not(:nth-last-child(-n + 3)) {
+.projects .projects-element:not(:last-child) {
   margin-bottom: 30px;
 }
 
@@ -1027,6 +1075,7 @@ footer {
 .projects-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .projects-element-link:hover, .projects-element-link:focus {
@@ -1066,13 +1115,36 @@ footer {
   margin-right: 8px;
 }
 
+@media screen and (min-width: 768px) {
+  .projects .filter-list {
+    flex-wrap: nowrap;
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .projects .filter-list {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .projects-element:not(:nth-child(3n + 3)) {
+    margin-right: 30px;
+  }
+  .projects-element:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
+}
+
 .our-clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .our-clients__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -1080,19 +1152,9 @@ footer {
   text-align: center;
 }
 
-.our-clients__list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.our-clients__element:not(:last-child) {
-  margin-right: 30px;
-}
-
 .our-clients__client-link {
   display: block;
-  width: 170px;
+  width: 210px;
   height: 92px;
   border: 1px solid var(--our-clients);
   border-radius: 4px;
@@ -1106,6 +1168,18 @@ footer {
   border-color: var(--fill-accent);
 }
 
+.our-clients__list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: -15px;
+}
+
+.our-clients__element {
+  margin: 15px;
+}
+
 .our-clients__client-pic {
   fill: var(--our-clients);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1114,5 +1188,34 @@ footer {
 .our-clients__client-link:hover .our-clients__client-pic,
 .our-clients__client-link:focus .our-clients__client-pic {
   fill: var(--fill-accent);
+}
+
+@media screen and (min-width: 768px) {
+  .our-clients__client-link {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .our-clients__title {
+    margin-bottom: 50px;
+  }
+  .our-clients__element {
+    margin: 0;
+  }
+  .our-clients__element:not(:last-child) {
+    margin-right: 30px;
+  }
+  .our-clients__client-link {
+    width: 170px;
+  }
+  .our-clients__list {
+    margin: 0;
+    flex-wrap: nowrap;
+  }
 }
 /*# sourceMappingURL=main.css.map */
