--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -8,6 +8,22 @@
   }
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 .features__feature-title {
   font-size: 14px;
   font-weight: bold;
@@ -30,12 +46,13 @@
     flex-wrap: wrap;
     margin: -15px;
   }
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    margin: 0;
+  }
 }
 
 .features__feature-element {
-  /*   width: 270px;
-  margin-right: 30px; */
-  margin-bottom: 30px;
   &::before {
     content: '';
     padding: 0 auto;
@@ -48,7 +65,17 @@
     border-radius: 4px;
     margin-bottom: 30px;
   }
+}
 
+.features__feature-element {
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+.features__feature-element {
   @media screen and (min-width: 768px) {
     width: calc(50% - 30px);
     margin: 15px;
@@ -56,8 +83,10 @@
 
   @media screen and (min-width: 1200px) {
     width: 270px;
-    margin: 0px;
-    margin-right: 30px;
+    margin: 0;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
 }
 
