--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -6,12 +6,19 @@
   background: var(--bgcolor-hero);
   background-color: var(--hero-bg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/bg-hero.jpg);
+    url(../images/bg-hero-480.jpg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
 
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/bg-hero-768.jpg);
+  }
   @media screen and (min-width: 1200px) {
     padding: 200px 0;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/bg-hero-1600.jpg);
   }
 
   .hero-title {
