--- a/sass/layouts/_our-clients.scss
+++ b/sass/layouts/_our-clients.scss
@@ -1,9 +1,10 @@
 .our-clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
+
 .our-clients__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -11,21 +12,9 @@
   text-align: center;
 }
 
-.our-clients__list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.our-clients__element {
-  &:not(:last-child) {
-    margin-right: 30px;
-  }
-}
-
 .our-clients__client-link {
   display: block;
-  width: 170px;
+  width: 210px;
   height: 92px;
   border: 1px solid var(--our-clients);
   border-radius: 4px;
@@ -40,6 +29,18 @@
   }
 }
 
+.our-clients__list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: -15px;
+}
+
+.our-clients__element {
+  margin: 15px;
+}
+
 .our-clients__client-pic {
   fill: var(--our-clients);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -47,5 +48,39 @@
   .our-clients__client-link:hover &,
   .our-clients__client-link:focus & {
     fill: var(--fill-accent);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .our-clients__client-link {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
+  .our-clients__title {
+    margin-bottom: 50px;
+  }
+
+  .our-clients__element {
+    margin: 0;
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+
+  .our-clients__client-link {
+    width: 170px;
+  }
+
+  .our-clients__list {
+    margin: 0;
+    flex-wrap: nowrap;
   }
 }
