--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,7 @@ ul {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+  background: rgba(241, 129, 129, 0.3);
 }
 
 .logo {
@@ -1126,6 +1127,12 @@ footer {
 @media screen and (min-width: 1200px) {
   .projects .filter-list {
     margin-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .projects-element {
+    margin-right: 30px;
   }
 }
 
