--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ ul {
 }
 
 .container {
-  max-width: 1200px;
+  /*   max-width: 1200px; */
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
@@ -239,6 +239,7 @@ ul {
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.63;
   padding: 6px 22px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -787,6 +788,7 @@ footer {
 }
 
 .features__feature-title {
+  text-align: center;
   font-size: 14px;
   font-weight: bold;
   text-transform: uppercase;
@@ -1041,11 +1043,6 @@ footer {
   border: none;
   display: flex;
   flex-wrap: wrap;
-  /* margin: 0 auto; */
-  margin-bottom: 30px;
-}
-
-.projects .projects-element:not(:last-child) {
   margin-bottom: 30px;
 }
 
@@ -1057,7 +1054,7 @@ footer {
 }
 
 .projects .project-name {
-  font-weight: bold;
+  font-weight: 700;
   font-size: 18px;
   line-height: 2;
   margin-bottom: 4px;
@@ -1075,7 +1072,6 @@ footer {
 .projects-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
 }
 
 .projects-element-link:hover, .projects-element-link:focus {
@@ -1129,18 +1125,50 @@ footer {
   }
 }
 
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .projects-element:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .project-name {
+    width: 270px;
+  }
+  .projects-element-link:first-child {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+  .projects-element-link:first-child .project-descript {
+    flex-grow: 1;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .projects-element {
-    margin-right: 30px;
+    margin: 15px;
+  }
+  .projects-list {
+    margin: -15px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .projects-element:not(:nth-child(3n + 3)) {
-    margin-right: 30px;
-  }
-  .projects-element:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 30px;
+  /*   .projects-element {
+    &:not(:nth-child(3n + 3)) {
+      margin-right: 30px;
+    }
+    &:not(:nth-last-child(-n + 3)) {
+      margin-bottom: 30px;
+    }
+  } */
+}
+
+@media screen and (max-width: 429px) {
+  .project-element-popup-text {
+    padding: 10% 24px;
+    font-size: 12px;
   }
 }
 
