--- a/sass/components/_filter-element.scss
+++ b/sass/components/_filter-element.scss
@@ -5,6 +5,7 @@
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
+    font-weight: 500;
     line-height: 1.63;
     padding: 6px 22px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
