--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,5 +1,5 @@
 .page-nav {
-  margin: 0 0 0 93px;
+  margin: 0 0 0 88px;
 }
 
 .main-nav-list {
@@ -14,5 +14,11 @@
   margin: 0 50px 0 0;
   &:last-child {
     margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .page-nav {
+    margin: 0 0 0 93px;
   }
 }
