--- a/css/main.css
+++ b/css/main.css
@@ -571,6 +571,18 @@ ul {
   margin-left: auto;
 }
  */
+.mobile-menu {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
 @media screen and (max-width: 767px) {
   .page-nav,
   .contacts-list-header {
