--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -31,6 +31,18 @@
   margin-left: auto;
 }
  */
+.mobile-menu {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  &.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .page-nav,
   .contacts-list-header {
