--- a/css/main.css
+++ b/css/main.css
@@ -538,39 +538,29 @@ ul {
   background-color: var(--submit-btn);
 }
 
-/* .contacts-header-element {
-  line-height: 1.15;
+.mobile-menu {
+  position: fixed;
+  padding: 48px 40px;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   font-weight: 500;
-  color: var(--fontcolor-contacts);
-  font-size: 14px;
+  /*   max-width: 480px; */
+  /*   max-height: 796px; */
+  background-color: var(--white);
 }
 
-.page-header {
-  border-bottom: 1px solid var(--bordercolor-header);
-
-  .container {
-    display: flex;
-    align-items: center;
-  }
-
-  .logo {
-    margin: 0;
-  }
-
-  .contacts-header-element {
-    margin: 0 30px 0 0;
-
-    &:last-child {
-      margin-right: 0;
-    }
-  }
-}
- 
-.contacts-list-header {
-  display: flex;
-  margin-left: auto;
+/* .mobile-menu__container {
+  position: fixed;
+  padding: 48px 40px;
 }
  */
+/* @media screen and (min-width: 480px) and (max-width: 767px) {
+  .mobile-menu {
+
+  }
+} */
 .mobile-menu {
   opacity: 0;
   visibility: hidden;
@@ -581,6 +571,76 @@ ul {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
+}
+
+.mobile-menu__close-btn {
+  position: absolute;
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+  right: 25px;
+  top: 21px;
+}
+
+.mobile-menu__nav-items {
+  margin-bottom: 302px;
+}
+
+.mobile-nav-item {
+  font-size: 40px;
+  line-height: 0.85;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-nav-item:not(:last-child) {
+  margin-bottom: 35px;
+}
+
+.mobile-nav-item:hover, .mobile-nav-item:focus {
+  color: var(--fontcolor-navigation-focus-hover);
+}
+
+.mobile-menu__tel {
+  font-size: 34px;
+  line-height: 1.17;
+  margin-bottom: 32px;
+  color: var(--fill-accent);
+}
+
+.mobile-menu__email {
+  font-size: 24px;
+  line-height: 1.17;
+  color: var(--fontcolor-contacts);
+  margin-bottom: 64px;
+}
+
+.mobile-menu__tel,
+.mobile-menu__email {
+  display: flex;
+}
+
+.mobile-menu__telhover, .mobile-menu__telfocus,
+.mobile-menu__emailhover,
+.mobile-menu__emailfocus {
+  color: var(--fontcolor-navigation-focus-hover);
+}
+
+.is-mobile-active {
+  color: var(--fontcolor-navigation-active);
+}
+
+.mobile-menu__social-links {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  color: var(--fill-accent);
+}
+
+.mobile-menu__social-links .mobile-social-link:not(:last-child) {
+  margin-right: 20px;
 }
 
 @media screen and (max-width: 767px) {
