--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,7 @@
 @import './components/modal-window';
 @import './components/modal-form';
 @import './components/submit-btn';
+@import './components/mobile-menu';
 
 @import './layouts/header';
 @import './layouts/footer';
