--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -11,8 +11,11 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
+  width: 96vw;
+  height: 96vh;
+  max-width: 450px;
+  max-height: 609px;
+  overflow: auto;
   background-color: var(--bgcolor-body);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -35,5 +38,15 @@
   &:hover,
   &:focus {
     fill: var(--fill-accent);
+  }
+}
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
   }
 }
