--- a/sass/layouts/_projects.scss
+++ b/sass/layouts/_projects.scss
@@ -1,6 +1,6 @@
 .projects {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 
   .container {
     display: flex;
@@ -11,7 +11,7 @@
     border: none;
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
   }
 
   .project-descript {
@@ -133,17 +133,17 @@
   .projects-list {
     margin: -15px;
   }
+
+  .filter-list {
+    margin-bottom: 40px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
-  /*   .projects-element {
-    &:not(:nth-child(3n + 3)) {
-      margin-right: 30px;
-    }
-    &:not(:nth-last-child(-n + 3)) {
-      margin-bottom: 30px;
-    }
-  } */
+  .projects {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 @media screen and (max-width: 429px) {
