--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,4 +1,5 @@
 .mobile-menu {
+  z-index: 100;
   position: fixed;
   padding: 48px 40px;
   top: 0;
@@ -93,6 +94,7 @@
 
 .mobile-menu__social-links {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
 
@@ -103,5 +105,11 @@
 
   .mobile-social-link:not(:last-child) {
     margin-right: 20px;
+  }
+}
+
+@media screen and (max-width: 379px) {
+  .mobile-menu__tel {
+    font-size: 28px;
   }
 }
