adaptive - mob-menu - small size

--- a/css/main.css
+++ b/css/main.css
@@ -697,6 +697,16 @@ ul {
   .mobile-menu__tel {
     font-size: 28px;
   }
+  .mobile-nav-item {
+    font-size: 20px;
+    line-height: 0.85;
+  }
+  .mobile-nav-item:not(:last-child) {
+    margin-bottom: 15px;
+  }
+  .mobile-menu__nav-items {
+    margin-bottom: 202px;
+  }
 }
 
 @media screen and (max-width: 767px) {
