--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -5,8 +5,8 @@
   margin: 0 auto;
   background: var(--bgcolor-hero);
   background-color: var(--hero-bg);
-  /*   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/bg-hero-480.jpg); */
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/bg-hero-480.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
