--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -125,6 +125,10 @@
     font-size: 14px;
     line-height: 1.72;
   }
+
+  .modal-title {
+    line-height: 1.15;
+  }
 }
 
 @media screen and (max-width: 767px) {
