--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -46,7 +46,7 @@
 
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 528px;
-    height: 581px;
+    max-width: 528px;
+    max-height: 581px;
   }
 }
