--- a/sass/layouts/_projects.scss
+++ b/sass/layouts/_projects.scss
@@ -43,6 +43,12 @@
   flex-wrap: wrap;
 }
 
+.projects-element {
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
 .projects-element-link {
   &:hover,
   &:focus {
@@ -100,14 +106,14 @@
 }
 //--------------------------------
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+/* @media screen and (max-width: 767px) {
   .projects-element {
     &:not(:last-child) {
       margin-bottom: 30px;
     }
   }
 }
-
+ */
 //--- 2nd card with 2lines name-------
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .project-name {
@@ -126,7 +132,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .projects-element {
+  .projects-list .projects-element {
     margin: 15px;
   }
 
