--- a/css/main.css
+++ b/css/main.css
@@ -1121,6 +1121,12 @@ footer {
   line-height: 1.72;
 }
 
+@media screen and (min-width: 768px) {
+  .features__feature-title {
+    text-align: left;
+  }
+}
+
 .features__list {
   margin: 0 auto;
 }
