--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -39,6 +39,12 @@
   line-height: 1.72;
 }
 
+@media screen and (min-width: 768px) {
+  .features__feature-title {
+    text-align: left;
+  }
+}
+
 .features__list {
   margin: 0 auto;
 
